tests/ui/coherence/incoherent-even-though-we-fulfill.stderr
error[E0119]: conflicting implementations of trait `Foo` for type `()`
  --> $DIR/incoherent-even-though-we-fulfill.rs:15:1
   |
LL | impl<T> Foo for T where (): Mirror<Assoc = T> {}
   | --------------------------------------------- first implementation here
LL |
LL | impl<T> Foo for T where T: Iterator {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `()`
   |
   = note: upstream crates may add a new impl of trait `std::iter::Iterator` for type `()` in future versions

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0119`.
